registry.k8s.io/explorations/2021-10-implementations/envoy-lua-go/envoy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-reg-envoy-lua-go
  labels:
    cert-manager-tls: sync
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    lastcfg: |
      ${ENVOY_LAST_CFG}
  labels:
    app: k8s-reg-envoy-lua-go
  name: k8s-reg-envoy-lua-go
  namespace: k8s-reg-envoy-lua-go
spec:
  replicas: 10
  selector:
    matchLabels:
      app: k8s-reg-envoy-lua-go
  template:
    metadata:
      annotations:
        lastcfg: |
          ${ENVOY_LAST_CFG}
      labels:
        app: k8s-reg-envoy-lua-go
    spec:
      containers:
      - name: envoy
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
        args:
        - -c
        - /etc/envoy/envoy.yaml
        image: envoyproxy/envoy-distroless:v1.20.0
        volumeMounts:
          - name: config
            mountPath: /etc/envoy/envoy.yaml
            subPath: envoy.yaml
        ports:
          - name: http
            containerPort: 10000
      volumes:
      - name: config
        configMap:
          name: envoy-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8s-reg-envoy-lua-go
  name: k8s-reg-envoy-lua-go
  namespace: k8s-reg-envoy-lua-go
spec:
  ports:
  - name: registry-k8s-io
    port: 10000
    protocol: TCP
    targetPort: 10000
  selector:
    app: k8s-reg-envoy-lua-go
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-reg-envoy-lua-go
  namespace: k8s-reg-envoy-lua-go
spec:
  rules:
  - host: k8s-reg-envoy-lua-go.${SHARINGIO_PAIR_BASE_DNS_NAME}
    http:
      paths:
      - backend:
          service:
            name: k8s-reg-envoy-lua-go
            port:
              number: 10000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - k8s-reg-envoy-lua-go.${SHARINGIO_PAIR_BASE_DNS_NAME}
    secretName: letsencrypt-prod
